altered attempt to fix paragraph alignment by use of containers

--- a/alternative.css
+++ b/alternative.css
@@ -131,7 +131,7 @@ footer {
 
 .main-article {
   display: grid;
-  grid-template-columns: repeat(2, minmax(260px, 1fr));
+  grid-template-columns: repeat(2, minmax(2600px, 1fr));
   gap: 20px;
 }
 
